# in-toto-rs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  GOVERNANCE.md  MAINTAINERS.txt  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: example_link.json  in_toto_run_test.rs  key_id.txt  load_keys_from_keygen.rs  serialize_keys.rs  write_link.rs
examples/keygen_example/: ed25519  ed25519.pub
src/: crypto.rs  error.rs  lib.rs  metadata.rs  rulelib.rs  runlib.rs  verification.rs  verifylib.rs
src/interchange/: mod.rs
src/interchange/cjson/: mod.rs  pretty.rs  shims.rs
src/models/: helpers.rs  layout.rs  metadata.rs  mod.rs
src/models/envelope/: envelope_file.rs  mod.rs  pae_v1.rs
src/models/layout/: inspection.rs  metadata.rs  mod.rs  rule.rs  step.rs  supply_chain_item.rs
src/models/link/: byproducts.rs  metadata.rs  mod.rs
src/models/predicate/: link_v02.rs  mod.rs  proven_v01.rs  proven_v02.rs  slsa_provenance_v01.rs  slsa_provenance_v02.rs
src/models/state/: mod.rs  state_naive.rs  state_v01.rs
src/models/statement/: mod.rs  state_naive.rs  state_v01.rs
tests/: hello_intoto  runlib.rs
tests/ecdsa/: ec  ec.pk8.der  ec.pub  ec.spki.der  gen.sh
tests/ed25519/: ed25519  ed25519-1  ed25519-1.pk8.der  ed25519-1.pub  ed25519-1.spki.der  ed25519-2.pk8.der
tests/rsa/: rsa-2048.pk8.der  rsa-2048.pkcs1.der  rsa-2048.spki.der  rsa-4096.pk8.der  rsa-4096.pkcs1.der  rsa-4096.spki.der
tests/test_metadata/: demo.layout  demo.link  owner.der
tests/test_runlib/: symbolic_.to_parent  symbolic_to_file  symbolic_to_license_file
tests/test_runlib/hello./: symbolic_to_nonparent_folder
tests/test_verifylib/links/: clone.776a00e2.link  package.2f89b927.link  update-version.776a00e2.link
tests/test_verifylib/workdir/: alice.pub  root.layout
