[package]
name = "in-toto"
edition = "2018"
version = "0.3.1"
authors = ["Santiago Torres-Arias <santiagotorres@purdue.edu>",
           "Qijia 'Joy' Liu <joyliu.q@gmail.com>"]
description = "Library for in-toto"
homepage = "https://in-toto.io"
repository = "https://github.com/in-toto/in-toto-rs"
documentation = "https://docs.rs/in-toto"
readme = "README.md"
license = "MIT"
keywords = [ "security" ]
categories = [ "cryptography" ]

[lib]
name = "in_toto"
path = "./src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = [ "clock", "serde" ], default-features = false }
data-encoding = "2.0.0-rc.2"
derp = "0.0.14"
futures-executor = "0.3.1"
futures-io = "0.3.1"
futures-util = { version = "0.3.1", features = [ "compat", "io" ] }
http = "0.2"
hyper = { version = "0.14", default-features = false }
itoa = "1"
log = "0.4"
ring = { version = "0.16" }
parking_lot = "0.12"
percent-encoding = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tempfile = "3"
untrusted = "0.7"
url = "2"
thiserror = "1.0"
walkdir = "2"
path-clean = "1.0.1"
rand = "0.8.4"
lazy_static = "1.4.0"
once_cell = "1.10.0"
strum = "0.25"
strum_macros = "0.25"
pem = "3.0.0"
path-matchers = "1.0.2"
glob = "0.3.0"

[dev-dependencies]
lazy_static = "1"
maplit = "1"
matches = "0.1.8"
pretty_assertions = "1.3"
assert-json-diff = "2.0.2"
rstest = "0.18.1"

[features]

