[package]
name = "in-toto"
edition = "2021"
version = "0.3.1"
authors = ["Santiago Torres-Arias <santiagotorres@purdue.edu>",
           "Qijia 'Joy' Liu <joyliu.q@gmail.com>"]
description = "Library for in-toto"
homepage = "https://in-toto.io"
repository = "https://github.com/in-toto/in-toto-rs"
documentation = "https://docs.rs/in-toto"
readme = "README.md"
license = "MIT"
keywords = [ "security" ]
categories = [ "cryptography" ]

[lib]
name = "in_toto"
path = "./src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = [ "clock", "serde" ], default-features = false }
data-encoding = "2"
derp = "0.0.14"
itoa = "1"
log = "0.4"
ring = { version = "0.17" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
untrusted = "0.7"
thiserror = "2.0"
walkdir = "2"
path-clean = "1.0.1"
strum = "0.26"
strum_macros = "0.26"
pem = "3.0.0"
glob = "0.3.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1"
maplit = "1"
matches = "0.1.8"
once_cell = "1.10.0"
pretty_assertions = "1.3"
rstest = "0.19.0"
tempfile = "3"

[features]

